algumas modificações no titulo

--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
 <body>
     <div>
         <img src="imagem/ti.avif" alt="foto do gamer">
-        <h1> DTI CATEDRAL CAMPOS </h1>
+        <div id="cat">
+            <h1> DTI CATEDRAL CAMPOS </h1>
+        </div>
         <p>
-            Clique em: ENTRAR EM CONTATO <br>
+            Clique em: <br>
+             ENTRAR EM CONTATO <br>
             e nos informe o que está acontecendo. <br>
             Problemas no Computador, <br>
             Impressora, <br>
