voltei as configuurações anteriores

--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
 
 <body>
     <div>
-        <img src="imagem/ti.avif" alt="foto do gamer">
-        <div id="cat">
+        <img src="imagem/ti.avif" alt="logo de dti">
+
             <h1> DTI CATEDRAL CAMPOS </h1>
-        </div>
         <p>
             Clique em: <br>
              ENTRAR EM CONTATO <br>
